@@ -32,8 +32,6 @@ r\"{a}ttas, f\"{o}rhoppningsvis f\"{o}re sommaren 1991.
 * N{r man skickat in en text s} borde den v{nta tills det {r klart
   innan den accepterar andra kommandon.
 
-* read-list-enter-read-info skall vara iterativ, inte rekursiv.
-
 * Lappar p} d|rrar f|r m|ten.
 
 * kom-who bufferten avg|r sin bredd genom att titta p} bredden i den
